fix: adjusting home page align

--- a/src/assets/css/Media-Home.css
+++ b/src/assets/css/Media-Home.css
@@ -7,7 +7,8 @@
     }
 
     .content {
-        width: 75%;
+        width: 90%;
+        max-width: 450px;
     }
 
     .content article {
@@ -90,8 +91,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
-        /* background-color: rgb(228, 152, 228); */
     }
 
     .content {
@@ -155,7 +154,8 @@
     }
 
     .content {
-        width: 35%;
+        width: 45%;
+        max-width: 680px;
     }
 
     .content article {
@@ -182,8 +182,6 @@
 
     .content .social-icons-area {
         width: 100%;
-        padding-top: 30px;
-        margin-left: 30px;
     }
 
     .icon {
